@@ -1,0 +1,23 @@
+\ybaselineshift10pt
+\parindent5pt
+\showboxbreadth10000
+\showboxdepth10000
+\tracingonline1
+\setbox0=\vbox{\hsize=40pt%
+  {\ybaselineshift0pt oお\par fiか\par
+	\global\setbox4=\lastbox\unskip\unskip
+   	\global\setbox5=\lastbox\unskip\unskip
+  }
+  \leavevmode\hbox{}いi\par uう\par えe\par
+  \setbox1=\lastbox\unskip\unskip
+  \setbox2=\lastbox\unskip\unskip
+  \setbox3=\lastbox\unskip\unskip
+
+  \hsize=200pt
+  \leavevmode\unhcopy3\unhcopy1\unhcopy4\unhcopy5\unhcopy2
+
+  %\showbox1\showbox2\showbox3\showbox4\showbox5
+}\unvbox0
+
+\end
+
